# jcc

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  test.sh  tmp  tmp.s
.cargo/: config.toml
.github/workflows/: ci.yml  makefile.yml
crates/jcc/: Cargo.toml
crates/jcc/doc/: pre-processor.md
crates/jcc/src/: cli.rs  codegen.rs  desugar.rs  emit.rs  ir.rs  lex.rs  lexer.rs  lib.rs  lower.rs  main.rs  parse.rs  parser.rs  profile.rs  sema.rs  ssa.rs  tacky.rs  testutil.rs
crates/jcc/src/ast/: constant.rs  graphviz.rs  mermaid.rs  mod.rs  parse.rs  slice.rs  ty.rs
crates/jcc/src/prep/: mod.rs  stack.rs  stream.rs  table.rs
crates/jcc/src/sema/: control.rs  label.rs  loops.rs  mod.rs  resolve.rs  symtab.rs  ty.rs  typing.rs
crates/jcc/src/ssa/: ctx.rs  mod.rs
crates/jcc/src/tok/: lex.rs  mod.rs
crates/jcc/src/token/: lex.rs  mod.rs  stream.rs
crates/jcc_arena/: Cargo.toml
crates/jcc_arena/src/: arena.rs  frozen.rs  intern.rs  lib.rs  traits.rs
crates/jcc_args/: Cargo.toml
crates/jcc_args/src/: error.rs  keys.rs  lib.rs
crates/jcc_backend/: Cargo.toml
crates/jcc_backend/src/: lib.rs
crates/jcc_backend/src/infra/: inset.rs
crates/jcc_backend/src/ir/: builder.rs  inst.rs  mod.rs  pretty.rs  term.rs  testutil.rs
crates/jcc_backend/src/ir/analysis/: cfg.rs  dom.rs  liveness.rs  mod.rs  order.rs
crates/jcc_backend/src/ir/parse/: lex.rs  mod.rs
crates/jcc_backend/src/ir/parser/: lex.rs  mod.rs  parse.rs  token.rs
crates/jcc_backend/src/ir/passes/: mem2reg.rs
crates/jcc_backend/src/x86_64/: emit.rs  mod.rs  regalloc.rs  regs.rs
crates/jcc_codemap/: Cargo.toml
crates/jcc_codemap/src/: byte.rs  color.rs  file.rs  lib.rs  simple.rs  span.rs  testutil.rs
crates/jcc_entity/: Cargo.toml
crates/jcc_entity/src/: counter.rs  hash.rs  lib.rs  list.rs  option.rs  primary.rs  secondary.rs  slice.rs  slot.rs
crates/jcc_entity/src/slice/: bucket.rs  mod.rs
crates/jcc_entity/src/sparse/: map.rs  mod.rs  set.rs
crates/jcc_identity/: Cargo.toml
crates/jcc_identity/src/: lib.rs
crates/jcc_interner/: Cargo.toml
crates/jcc_interner/src/: lib.rs  symtab.rs
crates/jcc_sourcemap/: Cargo.toml
crates/jcc_sourcemap/src/: diag.rs  lib.rs
crates/jcc_ssa/: Cargo.toml
crates/jcc_ssa/doc/: effects.rs
crates/jcc_ssa/src/: builder.rs  effects.rs  insertion.rs  lib.rs  verify.rs
crates/jcc_ssa/src/amd64/: build.rs  emit.rs  fix.rs  mod.rs
crates/jcc_ssa/src/codegen/amd64/: inst.rs  mod.rs  reg.rs
crates/jcc_ssa/src/infra/: emitter.rs  inset.rs  mod.rs
crates/jcc_ssa/src/ir/: builder.rs  inst.rs  mod.rs  pretty.rs  term.rs  ty.rs
crates/source_file/: Cargo.toml
crates/source_file/src/: diag.rs  diagnostic.rs  lib.rs
crates/ssa/: Cargo.toml
crates/ssa/doc/: dominance.md
crates/ssa/src/: amd64.rs  effects.rs  insertion.rs  lib.rs  main.rs  verify.rs
crates/ssa/src/amd64/: build.rs  emit.rs  mod.rs
crates/ssa/src/opt/: cf.rs  dce.rs
crates/ssa/src/optimize/: cf.rs  dce.rs  mod.rs
crates/tacky/: Cargo.toml
crates/tacky/doc/: ssa.md
crates/tacky/src/: amd64.rs  arm64.rs  lib.rs  x64.rs
crates/tacky/src/amd64/: build.rs  emit.rs  fix.rs  mod.rs
include/: ast.h  codegen_x86.h  desugar.h  parse.h  resolve.h  scan.h  sema.h  token.h
include/adt/: hash_map.h  hash_set.h  slice.h  span.h  string_view.h  vector.h
include/alloc/: arena.h
include/support/: base.h  error.h  file.h
lib/: base.h
old/: arena.c  arena.h  ast.h  error.c  error.h  hash_map.c  hash_map.h  hash_set.c  hash_set.h  lexer.c  lexer.h  macros.h  main.c  resolve.c  resolve.h  sema.c  source_map.c  source_map.h  type_check.c  type_check.h
src/: arena.c  arena.h  ast.c  ast.h  base.h  codegen_x86.c  codegen_x86.h  desugar.c  diagnostic.rs  error.c  error.h  file.c  file.h  hash_map.c  hash_map.h  hash_set.c  hash_set.h  jcc.c  lexer.c  lexer.h  lib.rs  macros.h  main.c  main.rs  parse.c  parse.h  parser.h  reporting.rs  resolve.c  resolve.h  scan.c  scan.h  sema.c  sema.h  source_file.rs  string_view.c  string_view.h  token.c  token.h
src/adt/: hash_map.c  hash_map.h  hash_set.c  hash_set.h  vector.h
src/alloc/: arena.c  arena.h
src/support/: base.h  error.c  error.h  file.c
test/: test.sh
test/scan/: delimiters.exp  delimiters.inp  keywords.exp  keywords.inp
tests/: .gitignore
