[package]
name = "jcc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
anyhow = "1.0.93"
thiserror = "2.0.3"
string-interner = "0.17.0"
source_file = { path = "../source_file" }
phf = { version = "0.11.2", features = ["macros"] }
peeking_take_while = "1.0.0"
