[package]
name = "jcc"
version = "0.1.0"
edition = "2021"
description = "A C compiler implementation"
keywords = ["compiler", "c", "codegen", "optimization", "assembly"]
categories = ["command-line-utilities", "compilers", "development-tools"]
license = "MIT"
repository = "https://github.com/jsilll/jcc"
readme = "README.md"

[dependencies]
jcc_ssa = { path = "../jcc_ssa" }
jcc_arena = { path = "../jcc_arena" }
jcc_entity = { path = "../jcc_entity" }

anyhow = "1.0.93"
phf = { version = "0.11.2", features = ["macros"] }
clap = { version = "4.5.20", features = ["derive"] }
