[package]
name = "jcc"
version = "0.1.0"
edition = "2021"
description = "A C compiler implementation"
keywords = ["compiler", "c", "codegen", "optimization", "assembly"]
categories = ["command-line-utilities", "compilers", "development-tools"]
license = "MIT"
repository = "https://github.com/jsilll/jcc"
readme = "README.md"

[dependencies]
anyhow = "1.0.93"

jcc_args = { path = "../jcc_args" }
jcc_arena = { path = "../jcc_arena" }
jcc_entity = { path = "../jcc_entity" }
jcc_backend = { path = "../jcc_backend" }

