[package]
name = "jcc_args"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Minimal command-line argument parsing library."
keywords = ["command-line", "arguments", "parsing", "cli"]
categories = ["command-line-utilities", "parsing"]
repository = "https://github.com/jsilll/jcc"
readme = "README.md"

[lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

default_trait_access = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
mut_from_ref = "allow"
return_self_not_must_use = "allow"
similar_names = "allow"

dbg_macro = "warn"
expect_used = "allow"
panic = "warn"
todo = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
unwrap_used = "warn"
