[package]
name = "jcc_backend"
version = "0.1.0"
edition = "2021"
description = "A backend for the JCC compiler, responsible for generating machine code from the intermediate representation."
keywords = ["ssa", "ir", "optimization", "codegen", "compiler"]
categories = ["compilers", "development-tools"]
license = "MIT"
repository = "https://github.com/jsilll/jcc"
readme = "README.md"

[dependencies]
jcc_entity = { path = "../jcc_entity" }
jcc_interner = { path = "../jcc_interner" }
jcc_codemap = { path = "../jcc_codemap", features = ["color"] }
