[package]
name = "jcc_codemap"
version = "0.1.0"
edition = "2021"
description = "Source location tracking and diagnostic reporting for compilers and language tools"
keywords = ["compiler", "diagnostics", "source", "span", "error-reporting"]
categories = [
    "command-line-utilities",
    "compilers",
    "filesystem",
    "visualization",
]
license = "MIT"
repository = "https://github.com/yourusername/jcc"
readme = "README.md"

[dependencies]
termcolor = { version = "1.4", optional = true }

[features]
default = []
color = ["termcolor"]

[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

default_trait_access = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
similar_names = "allow"

dbg_macro = "warn"
expect_used = "allow"
indexing_slicing = "warn"
panic = "warn"
todo = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
unwrap_used = "warn"
