[package]
name = "jcc_interner"
version = "0.1.0"
edition = "2021"
description = "Efficient string interning for compiler symbol tables and identifiers"
keywords = ["interner", "string", "symbol", "compiler", "deduplication"]
categories = ["data-structures", "compilers", "text-processing"]
license = "MIT"
repository = "https://github.com/jsilll/jcc"
readme = "README.md"

[lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

default_trait_access = "allow"
indexing_slicing = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
similar_names = "allow"

dbg_macro = "warn"
expect_used = "allow"
panic = "warn"
todo = "warn"
undocumented_unsafe_blocks = "warn"
unimplemented = "warn"
unwrap_used = "warn"
